Small Fixes fixes
fix: aspect-ratio support on Safari for sectionLatestSeries
fix: Animations removed on Series Playlist
fix: Extra space at the end of the Series Playlist for Safari
peft: Attachment list on watchDetails; text truncated, one attachment per line

--- a/src/components/vod/blurb/blurbVerticalSeries.scss
+++ b/src/components/vod/blurb/blurbVerticalSeries.scss
@@ -23,7 +23,9 @@
         overflow: hidden;
 
         .card-img-top {
-            aspect-ratio: 9 / 16; 
+            width: 100%;
+            padding-top: 177%;
+            max-height: 300px;
             position: relative;
         }
 
